refactor: added eslint and prettier pakcage to handle all the eslint rule issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,13 +21,7 @@
     }
   },
   "include": [
-    "src",
-    "src/components",
-    "src/services",
-    "src/types/types.ts",
-    "App.tsx",
-    "*.ts",
-    "*.tsx"
+    "src"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
